<resources>
    <string name="app_name">SmartNoteOrganizer</string>
    <string name="login_title">Smart Note Organizer</string>
    <string name="register_title">Create Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="go_register">Don\'t have an account? Register</string>
    <string name="go_login">Already have an account? Login</string>
</resources>