<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_card"
            android:padding="@dimen/screen_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                style="@style/TitleText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/space_large"/>

            <EditText
                android:id="@+id/etRegUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                style="@style/AppInput"
                android:layout_marginBottom="@dimen/space_medium"/>

            <EditText
                android:id="@+id/etRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                style="@style/AppInput"
                android:layout_marginBottom="@dimen/space_medium"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                style="@style/AppButtonPrimary"
                android:layout_marginBottom="@dimen/space_medium"/>

            <TextView
                android:id="@+id/tvGoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_login"
                style="@style/SubtitleText"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>